# Boy-Howdy

./: README.md  howdy-modernization-changes.md  meson.build  meson.options  pyproject.toml
fedora/: Makefile.selinux  boy-howdy.fc  boy-howdy.if  boy-howdy.spec  boy-howdy.te  howdy-authselect  howdy-upgrade-check
howdy-gtk/src/: onboarding.py  paths.py.in  paths_factory.py
howdy/src/: compare.py  config.ini  meson.build  paths.py.in  paths_factory.py
howdy/src/cli/: add.py  test.py
howdy/src/model-data/: install.sh
howdy/src/pam/: main.cc  meson.build  paths.hh.in
howdy/src/rubberstamps/: __init__.py  nod.py
howdy/src/systemd-sleep/: howdy-resume
